[package]
name = "openbabel-cli"
description = "Demo CLI for the openbabel Rust bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openbabel-demo"
path = "src/main.rs"

[dependencies]
openbabel = { path = "../openbabel", version = "0.3.0" }
